--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
                     app:layout_constraintVertical_bias="0.062">
 
                                                 <ImageView
+                                                    android:id="@+id/ivUser"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     android:scaleType="fitCenter"
@@ -41,6 +42,7 @@
                     app:layout_constraintVertical_bias="0.103" />
 
                 <TextView
+                    android:id="@+id/tvUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sfprorounded"
